--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "formidable": "^2.1.1",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {},
   "scripts": {
